[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/post_battle_screen.gd" id="1"]

[node name="PostBattleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="OutcomeLabel" type="Label" parent="Panel/VBox" unique_name_in_owner=true]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Victory!"
horizontal_alignment = 1

[node name="TurnCountLabel" type="Label" parent="Panel/VBox" unique_name_in_owner=true]
layout_mode = 2
theme_override_colors/font_color = Color(0.631, 0.631, 0.667, 1)
text = ""
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 280)

[node name="XPContainer" type="VBoxContainer" parent="Panel/VBox/ScrollContainer" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupLayer" type="Control" parent="Panel/VBox" unique_name_in_owner=true]
layout_mode = 2
custom_minimum_size = Vector2(0, 0)
mouse_filter = 2

[node name="Spacer" type="Control" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ContinueButton" type="Button" parent="Panel/VBox" unique_name_in_owner=true]
layout_mode = 2
text = "Return to Builder"
